# bosch_hackathon

./: README.md  create_json.py  label_tool.txt
navigation/: CMakeLists.txt  package.xml
navigation/include/: bosch_navigation.h  bosch_visualization.h  main.h
navigation/src/: bosch_navigation.cpp  bosch_visualization.cpp  main.cpp
vision/: CMakeLists.txt  package.xml
vision/include/: bosch_vision.h  main.h
vision/msg/: BoschVision.msg
vision/multinet/: common.py  common.py.orig  createStages.py  multinet.py  solver_spec.py
vision/src/: bosch_vision.cpp  main.cpp
